--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "concurrently -r \"npm run start:server\" \"npm run start:client\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start:server": "DEBUG=postribulo* babel-node server/index.js"
+    "start:server": "DEBUG=postribulo* babel-node server/index.js",
+    "start:client": "ng serve"
   },
   "private": true,
   "dependencies": {
@@ -25,8 +26,11 @@
     "angular2-moment": "^1.9.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "concurrently": "^4.1.2",
     "debug": "^4.1.1",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
+    "nodemon": "^1.19.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
