--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@types/url-join": "^4.0.0",
     "angular2-moment": "^1.9.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -33,6 +34,7 @@
     "nodemon": "^1.19.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "url-join": "^4.0.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
