--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "start:server": "DEBUG=postribulo* nodemon server/index.js --exec babel-node",
+    "start:server": "NODE_ENV=development DEBUG=postribulo* nodemon server/index.js --exec babel-node",
     "start:client": "ng serve"
   },
   "private": true,
@@ -32,7 +32,8 @@
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "nodemon": "^1.19.2",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
     "tslib": "^1.9.0",
     "url-join": "^4.0.1",
     "zone.js": "~0.9.1"
